<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_cat_main"
        android:title="@string/pref_category_general">

        <CheckBoxPreference
            android:key="pref_rotate"
            android:title="@string/pref_rotate"
            android:summary="@string/pref_rotate_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="pref_language"
            android:title="@string/pref_language"
            android:dialogTitle="@string/pref_select_language"
            android:entries="@array/pref_language_titles"
            android:entryValues="@array/pref_language_values"
            android:defaultValue="@string/pref_select_language_default" />

    </PreferenceCategory>

</PreferenceScreen>
