<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/join_us_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/join_us_about_olynet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/join_us_opening"/>

        <TextView
            android:id="@+id/join_us_headline_expect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/join_us_about_olynet"
            android:layout_marginTop="10dp"
            android:text="@string/join_us_headline_expect"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TableLayout
            android:id="@+id/join_us_expectations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/join_us_headline_expect">

            <TableRow
                android:id="@+id/expectation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_expectation1_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_expectation1_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_expectation1"/>
            </TableRow>

            <TableRow
                android:id="@+id/expectation2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_expectation2_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_expectation2_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_expectation2"/>
            </TableRow>

            <TableRow
                android:id="@+id/expectation3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_expectation3_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_expectation3_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_expectation3"/>
            </TableRow>

            <TableRow
                android:id="@+id/expectation4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_expectation4_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_expectation4_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_expectation4"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/join_us_headline_looking_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/join_us_expectations"
            android:layout_marginTop="10dp"
            android:text="@string/join_us_headline_looking_for"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TableLayout
            android:id="@+id/join_us_looking_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/join_us_headline_looking_for">

            <TableRow
                android:id="@+id/looking_for1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_looking_for1_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_looking_for1_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_looking_for1"/>
            </TableRow>

            <TableRow
                android:id="@+id/looking_for2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_looking_for2_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_looking_for2_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_looking_for2"/>
            </TableRow>

            <TableRow
                android:id="@+id/looking_for3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_looking_for3_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_looking_for3_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_looking_for3"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/join_us_headline_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/join_us_looking_for"
            android:layout_marginTop="10dp"
            android:text="@string/join_us_headline_offer"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TableLayout
            android:id="@+id/join_us_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/join_us_headline_offer">

            <TableRow
                android:id="@+id/join_us_offer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_offer1_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_offer1_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_offer1"/>
            </TableRow>

            <TableRow
                android:id="@+id/join_us_offer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_offer2_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_offer2_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_offer2"/>
            </TableRow>

            <TableRow
                android:id="@+id/join_us_offer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_offer3_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_offer3_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_offer3"/>
            </TableRow>

            <TableRow
                android:id="@+id/join_us_offer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_offer4_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_offer4_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_offer4"/>
            </TableRow>

            <TableRow
                android:id="@+id/join_us_offer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/join_us_offer5_bullet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/bullet"/>
                <TextView
                    android:id="@+id/join_us_offer5_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join_us_offer5"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/join_us_closing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/join_us_offer"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/join_us_closing"/>

    </RelativeLayout>
</ScrollView>
