<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/aboutAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"/>


    <RelativeLayout
        android:id="@+id/aboutAppGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAppIcon"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/aboutAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textIsSelectable="false"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/aboutAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/aboutAppName"
            android:layout_alignStart="@+id/aboutAppName"
            android:layout_below="@+id/aboutAppName"
            android:text="@string/about_version_string"
            android:textIsSelectable="false"
            android:textSize="12sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/aboutAppHelpUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/aboutAppGroup"
        android:layout_marginTop="25dp"
        android:text="@string/about_help_us"
        android:textIsSelectable="false"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/aboutLicenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAppHelpUs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/about_licenses"/>


</RelativeLayout>
